--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
+# Termux-compatible versions (no Rust compilation required)
 fastapi==0.109.0
-uvicorn==0.27.0
-pydantic==2.5.3
-python-multipart==0.0.6
+uvicorn[standard]==0.27.0
+pydantic==1.10.13
 psutil==5.9.8
 websockets==12.0
-
