--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Termux-compatible versions (no Rust compilation required)
 fastapi==0.109.0
-uvicorn[standard]==0.27.0
+uvicorn==0.27.0
 pydantic==1.10.13
 psutil==5.9.8
 websockets==12.0
+
