--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-# Termux-compatible versions (no Rust compilation required)
-fastapi==0.109.0
-uvicorn==0.27.0
-pydantic==1.10.13
+# Termux Python 3.12 compatible versions (no Rust compilation)
+fastapi==0.110.0
+uvicorn==0.27.1
+pydantic==1.10.15
 psutil==5.9.8
 websockets==12.0
-
